# fscoreai-ml

./: .gitignore  README.md  main.py  pyproject.toml  setup.py  todo.md
book/: main.aux  main.fdb_latexmk  main.fls  main.tex  main.toc  regression.aux  regression.fdb_latexmk  regression.fls  regression.synctex(busy)  regression.tex  regression.toc  texput.fls
datasets/: diabetes_data.csv  heart_data.csv
dev_config/: .bashrc  .vimrc  tex.snippets
exploration/: 20230225_Linear Regression.ipynb  20230225_Multiple_Linear Regression.ipynb  20230225_Simple_Linear Regression.ipynb  20230305_Linear Regression Regularization.ipynb  20230308_Linear Regression_Regularization.ipynb  20230326_Logistic Regression.ipynb  20230329_Regression Pipeline.ipynb  20230401_Dataset Exploration.ipynb  20230402_Classification Models.ipynb  20230507_Neural Networks from Scratch.ipynb  20230701 Linear Regression Test.ipynb  Artificial Neural Networks from Scratch.ipynb  Linear Regression Regularization.ipynb  Linear Regression.ipynb  Logistic Regression.ipynb  Test_Linear_Regression_Class.ipynb  Test_Logistic_Regression_Class.ipynb
fscoreai/: linear.py  loss.py  nn.py
fscoreai-ml/: utils.py
linear/: 20230326_Logistic Regression.ipynb  20230701_SkLearn Model Testing.ipynb  20230718_Logistic Regression.ipynb
linear_model/: 1-Linear_Regression.ipynb  20230225_Simple_Linear Regression.ipynb  Generalized Linear Models.ipynb  Linear Regression.ipynb  Simple Linear Regression.ipynb
neighbors/: Untitled.ipynb
neural_network/: 20230717_ANN.ipynb
notebooks/: 1_LinearRegression.ipynb  (+5 more)
(+42 files in other folders)
